--- a/src/play-list/css/play-list.css
+++ b/src/play-list/css/play-list.css
@@ -56,20 +56,31 @@ ul.item-list > li a.button-row {
 }
 
 div.modal {
+    background-color: rgba(200, 200, 200, 0.5);
+    height: 100%;
+    left: 0px;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 2;
+}
+
+
+div.modal div.modal-content {
     background-color: #fff;
     border: solid 1px #000;
+    margin-top: 10%;
+    margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
-    position: absolute;
-    top: 20px;
     width: 400px;
 }
 
-div.modal > div.content {
+div.modal-content div.modal-body {
     margin: 16px;
 }
 
-div.modal > h1 {
+div.modal-content > h1 {
     background-color: #f8e352;
     border-bottom: solid 1px #000;
     color: #66b7ec;
